--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   json_annotation: ^4.5.0
   json_serializable: ^6.2.0
   sqflite: ^2.0.2+1
+  toast: ^0.3.0
 
 dev_dependencies:
   json_serializable: ^6.2.0
